--- a/displayTables.html
+++ b/displayTables.html
@@ -2,37 +2,60 @@
 <html>
 <head>
 <title>AMAM Art Collection</title>
-<script>
-  function loadDoc() {
-  	var xhttp = new XMLHttpRequest();
-		xhttp.onreadystatechange = function() {
-			if (xhttp.readyState == 4 && xhttp.status == 200) {
-				document.getElementById("popupTablesMenu").innerHTML = xhttp.responseText;
-			}
-		}
-		xhttp.open("GET", "getTables.php", true);
-		xhttp.send();
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f4e1f4; /* Soft pastel purple background */
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
   }
-</script>
+  h1 {
+    color: #6a0dad; /* Purple accent color */
+  }
+  .container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+  }
+  .inputGroup {
+    margin: 20px 0;
+  }
+  .inputGroup button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #6a0dad; /* Purple accent color */
+    color: #fff;
+    transition: background-color 0.3s;
+  }
+  .inputGroup button:hover {
+    background-color: #4b0082; /* Darker purple for hover effect */
+  }
+</style>
 </head>
 
-<body onload=loadDoc()>
+<body>
 
-<h1>AMAM Art Collection DB</h1>
-<br />
-<form action="showTables.php" method="POST">
-	<div class='inputGroup'>
-		<span class="formLabel">Select A Table to Display</span>
-		<select name="table" id="popupTablesMenu">
-		<option>No tables found<option>
-		</select>
-	</div>
-
-	<div class='inputGroup'>
-		<input type='submit'></input>
-	</div>
-
-</form>
+<div class="container">
+  <h1>AMAM Art Collection DB</h1>
+  <div class='inputGroup'>
+    <button onclick="location.href='artPieces.html'">Query Art Pieces</button>
+  </div>
+  <div class='inputGroup'>
+    <button onclick="location.href='objects.html'">Query Objects</button>
+  </div>
+  <div class='inputGroup'>
+    <button onclick="location.href='donors.html'">Query Donors</button>
+  </div>
 </div>
 
 </body>
