--- a/artPieces.html
+++ b/artPieces.html
@@ -27,7 +27,7 @@
 <style>
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4e1f4; /* Soft pastel purple background */
+  background-color: #f4e1f4;
   margin: 0;
   padding: 0;
   display: flex;
@@ -48,7 +48,7 @@ body {
 }
 
 h1 {
-  color: #6a0dad; /* Purple accent color */
+  color: #6a0dad;
 }
 
 .inputGroup {
@@ -59,7 +59,7 @@ h1 {
   display: block;
   margin-bottom: 10px;
   font-weight: bold;
-  color: #6a0dad; /* Purple accent color */
+  color: #6a0dad;
 }
 
 .inputGroup input[type="text"], .inputGroup select {
@@ -81,13 +81,13 @@ h1 {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  background-color: #6a0dad; /* Purple accent color */
+  background-color: #6a0dad;
   color: #fff;
   transition: background-color 0.3s;
 }
 
 .inputGroup button:hover {
-  background-color: #4b0082; /* Darker purple for hover effect */
+  background-color: #4b0082;
 }
 
 .slider-container {
@@ -158,17 +158,6 @@ h1 {
     document.getElementById('endDateValue').textContent = endDate;
   }
 
-//   function queryArtPieces() {
-//     const title = document.getElementById('title').value;
-//     const artistName = document.getElementById('artistName').value;
-//     const donorName = document.getElementById('donorName').value;
-//     const classification = document.getElementById('classification').value;
-//     const department = document.getElementById('department').value;
-//     const startDate = document.getElementById('startDate').value;
-//     const endDate = document.getElementById('endDate').value;
-//     // Implement the query logic here
-//     alert(`Querying art pieces with title "${title}", artist name "${artistName}", donor name "${donorName}", classification "${classification}", department "${department}", dated between ${startDate} and ${endDate}`);
-//   }
 </script>
 
 </body>
